# AI_KB

./: .dockerignore  .gitignore  Dockerfile  README.md  abstract_models.py  cohere_llm.py  emb.yaml  hf_emb_model.py  inference_engine.py  llm_api.py  main.py  main_service.py  main_service_copy.py  mcp_client2.py  mcp_server.py  model.py  model_with_inference_engine.py  performance_results.json  pyproject.toml  slack_mcp_client.py  test.py  test_concurrent_llm.py  test_create.sh  test_delete.sh  test_get.sh  test_llm.py  test_llm_api.py  test_llm_batch.py  test_mcp_client.py  test_redis_client_cuncurrent.py  tetst2.py  utils.py  vector_db.py
.github/workflows/: docker-dev.yml
qdrant_schedule_price_multilingual_opt/: meta.json
qdrant_schedule_price_multilingual_opt/collection/multitenant_rag_collection/: storage.sqlite
