[project]
name = "ai-kb"
version = "0.1.0"
description = ""
authors = [
    {name = "Hamzeluie",email = "mehdihamze73@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "numpy (>=1.26.0,<2.3.0)",
    "transformers (>=4.56.1,<5.0.0)",
    "qdrant-client (>=1.15.1,<2.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "fastmcp (>=2.12.3,<3.0.0)",
    "cohere (>=5.18.0,<6.0.0)",
    "vllm (>=0.11.0,<0.12.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "redis (>=7.0.0,<8.0.0)",
    "agent-architect @ git+https://github.com/Hamzeluie/agent_architect.git",
    "matplotlib (>=3.10.7,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.gpu.dependencies]
torch = "^2.8.0"

